--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -1,15 +1,28 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "relateChart.fullname" . }}
+  name: django
   labels:
-    {{- include "relateChart.labels" . | nindent 4 }}
+    service: django
 spec:
-  type: {{ .Values.service.type }}
-  ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
   selector:
-    {{- include "relateChart.selectorLabels" . | nindent 4 }}
+    app: django
+  ports:
+  - port: 8000
+    protocol: TCP
+    targetPort: 8000
+
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: database
+  labels:
+    service: database
+spec:
+  selector:
+    service: database
+  type: ClusterIP
+  ports:
+  - port: 5432
