--- a/kub/ingress.yaml
+++ b/kub/ingress.yaml
@@ -1,4 +1,5 @@
-apiVersion: networking.k8s.io/v1
+apiVersion: networking.k8s.io/v1beta1
+
 kind: Ingress
 metadata:
   name: my-ingress
@@ -8,11 +9,8 @@ spec:
   - host: relate.me
     http:
       paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: django
-            port:
-              number: 8080
+      - backend:
+          serviceName: django
+          servicePort: 8000
+
      
