--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -1,28 +1,18 @@
+{{- range $element := .Values.services }}
 apiVersion: v1
 kind: Service
 metadata:
-  name: django
+  name: {{ $element.name }}
   labels:
-    service: django
+    service: {{ $element.name }}
 spec:
   selector:
-    app: django
-  ports:
-  - port: 8000
-    protocol: TCP
-    targetPort: 8000
-
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: database
-  labels:
-    service: database
-spec:
-  selector:
-    service: database
+    service: {{ $element.name }}
   type: ClusterIP
   ports:
-  - port: 5432
+  - port: {{ $element.port }}
+    targetPort: {{ $element.port }}
+---
+{{- end }}
+
+
