--- a/values.yaml
+++ b/values.yaml
@@ -1,14 +1,12 @@
-# Default values for relateChart.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
-
 replicaCount: 1
 
-image:
-  repository: nginx
-  pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+# !(TFLogin) customized image
+images:
+  app:
+    repository: abdelrahmankh/relate
+    tag: 1
+    pullPolicy: Always
+    
 
 imagePullSecrets: []
 nameOverride: ""
@@ -36,47 +34,63 @@ securityContext: {}
   # runAsNonRoot: true
   # runAsUser: 1000
 
-service:
-  type: ClusterIP
-  port: 80
+postgresql:
+  postgresqlDatabase: relate
+  postgresqlUsername: ZGphbmdv
+  postgresqlPassword: MWEyNmQxZzI2ZDFnZXNiP2U3ZGVzYj9lN2Q=
+
+telemetry:
+  enabled: "True"
+
+services:
+
+  relate:
+    name: relate
+    port: 8000
+    targetPort: 8000
+  postgres:
+    name: postgres
+    port: 5432
+    targetPort: 5432
+
+global:
+  ingress:
+    certresolver: default
 
 ingress:
-  enabled: false
-  className: ""
+  enabled: true
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
+  host: "domain.me" # replaced when installing chart by --set ingress.host=<domain>
+  paths:
+    - "/"
+
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
 
-resources: {}
+resources:
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
+    cpu: 3000
+    memory: 3072
 
 autoscaling:
   enabled: false
   minReplicas: 1
   maxReplicas: 100
   targetCPUUtilizationPercentage: 80
-  # targetMemoryUtilizationPercentage: 80
+  targetMemoryUtilizationPercentage: 80
 
 nodeSelector: {}
 
 tolerations: []
 
 affinity: {}
+
+threefoldVdc:
+  backup: ''
